# tmux-conf

./: .bandit  .envrc  .gitignore  .markdownlint.yaml  .olint.conf  .pylintrc  README.md  TODO.md  local_deploy.py  org-bandit  org_py_proj.txt  pips.txt  pyproject.toml  pyrightconfig.json  requirements_dev.txt  setup.cfg  simple_deploy.py  tox.ini
.github/workflows/: tests.yml
docs/: DevelEnv.md  PLUGINS.md  TMATE.md  TODO.md  scripting.md
samples/: vers_check.py  vi_nav.py
src/tmux_conf/: __init__.py  constants.py  embedded_scripts.py  exceptions.py  plugins.py  tmux_conf.py  utils.py  vers_check.py
src/tmux_conf/embeded_scripts/: README.md  __init__.py  builder.py  config.py  emitter.py  registry.py  scripts.py  spec.py
src/tmux_conf/plugins/: __init__.py  deployment.py  display.py  manager.py  registry.py
tests/: TODO.md  common_vars.py  conftest.py  debug_it.py  test_embeded_scripts.py  test_plugins.py  test_tmux_conf.py  test_utils.py  test_vers_check.py  utils_test.py
