[project]
name = "tmux_conf"
version = "0.22.1"
authors = [{ name = "Jacob Lundqvist", email = "Jacob.Lundqvist@gmail.com" }]
description = "Generates version checked tmux conf"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["tmux", "automation"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jaclu/tmux-conf"
Documentation = "https://github.com/jaclu/tmux-conf"
Repository = "https://github.com/jaclu/tmux-conf"
"Bug Tracker" = "https://github.com/jaclu/tmux-conf/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 92
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | test
  )/
)
'''

# [tool.flake8]

[tool.isort]
profile = "black"
line_length = 92

[tool.mypy]
python_version = "3.10"
exclude = "^tests/"
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.pymarkdown]
plugins.line-length.code_block_line_length = 92

[tool.pytest.ini_options]
addopts = "-ra -q --strict"
python_files = ["tests/test_*.py"]
